--- a/src/analysis/Q_Price_Corr.ipynb
+++ b/src/analysis/Q_Price_Corr.ipynb
@@ -318,7 +318,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Thể hiện mức tương qua giữa Open price, High price, Low price, Close price"
+    "----\n",
+    "### <center>Question 1: How 4 prices correlation with each other ?</center>\n",
+    "\n",
+    "#### Benifits of finding the answer:\n",
+    "- After this we can know that we need to focus in all 4 prices or just need some of them\n",
+    "- If they correlated, how it look like in the realtime ?\n",
+    "#### Answer:\n",
+    "- Calculate the correlation and plot the price graph for a more specific perspective"
    ]
   },
   {
@@ -410,9 +417,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Từ bảng trên, ta thấy được các tỉ giá có độ tương quan ảnh hưởng khá cao\n",
+    "> From the table, we can see that that they seem to be look the same with each other\n",
     "\n",
-    "> Ta sẽ lấy BTCUSDT và các giá của nó để trực quan lên line chart"
+    "Now we try to plot them in to a graph"
    ]
   },
   {
@@ -8455,9 +8462,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Với biểu đồ đường, ta cũng có thể thấy 4 tỉ giá này biến động gần như là khớp với nhau theo thời gian\n",
+    "> with the line graph, we also can we that all 4 prices that look nearly like the same, but there still have some fixed difference between them, so we can't conclude that should we drop some of them, because these prices is very importaint to make a successful trade"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "### <center>Question 2: Is the number of trade affect to the price of the token ?</center>\n",
     "\n",
-    ">ngoài ra ta xem xét thêm 1 chỉ số nữa là số lượng giao dịch, để xem có liên quan gì đến sự biến động giá hay không (ta chỉ xét trên một loại đồng)"
+    "#### Benifits of finding the answer:\n",
+    "- After this we can know that can we base on the trading trend of people to predict the next move of our trading\n",
+    "- And this maybe can prove that the token prices can be affected by human \n",
+    "#### Answer:"
    ]
   },
   {
@@ -8537,7 +8556,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Có vẻ không có sự tương quan nào ở đây đối với số lương giao dịch"
+    ">It seem to be there is nothing that affect by `number of trades`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try to plot it in a graph"
    ]
   },
   {
@@ -18166,7 +18193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Tuy độ tương quan hầu như là không có, nhưng những thời điểm mà số lượng giao dịch trở lên cao, thấp bất chợt, thì tại thời điểm đó mức 4 tỉ giá cũng bị ảnh hưởng mạnh, nên có thể thấy là số lượng giao dịch tuy không có ảnh hưởng lâu dài về thời gian, nhưng cũng là một dấu hiệu cho sự biến động giá mạnh"
+    "> Although the correlation is almost nonexistent, at times when the number of transactions is suddenly high or low, at that time the 4 rate level is also strongly affected, so it can be seen that the quantity is Trading has no lasting effect on time, but is also a sign of strong price movement"
    ]
   },
   {
@@ -18175,7 +18202,15 @@
    "metadata": {},
    "source": [
     "----\n",
-    "#### Ta thử xem các giá của symbol này có độ tương quan lớn với nhau không, với mục này ta chỉ xét trên một loại giá là 'High price'"
+    "### <center>Question 3: Is the price of symbols correlation with each other ?</center>\n",
+    "\n",
+    "#### Benifits of finding the answer:\n",
+    "- After this we can know that can we predict the price base on other symbol\n",
+    "- Verify if the market is prone to crash (From the case of the token LUNA)\n",
+    "#### Answer:\n",
+    "- Make the new data_set that is the prices of all symbols base on time\n",
+    "- Then calulate the correlation of them\n",
+    "- Take the symbols pair with the high correlation"
    ]
   },
   {
@@ -18220,7 +18255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> cũng có thể thấy ở đây chúng ta sẽ cũng không có nhiều sự tương quan trong biến đổi giá của các đồng"
+    "> from this we can see that it seem that not much correlation in symbols prices"
    ]
   },
   {
@@ -18392,8 +18427,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Ta có được 115 cặp, nhưng đa số ở đây là các cặp sẽ liên quan đến các đồng tiền ổn định, cho nên việc tương quan giữa các đồng này cũng không thực sự mang nhiều ý nghĩa"
+    "> Have 115 pairs, but most of them are have `stable coin` in each pair, so that seem make no sense that symbols affect each other"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
