--- a/src/analysis/Q_Most_Trading.ipynb
+++ b/src/analysis/Q_Most_Trading.ipynb
@@ -331,12 +331,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "----\n",
-    "### Which coin is available for the most trading"
+    "### <center>Question 1: Which coin is available for the most trading </center>\n",
+    "\n",
+    "#### Benifits of finding the answer:\n",
+    "- After this we can know the outstanding coins in the crypto community\n",
+    "- As well as knowing the coins is not of interest to many people\n",
+    "#### Answer:\n",
+    "- We take all the distinct Symbols in trading data, then count the number of time it appear even on base or quote"
    ]
   },
   {
@@ -1489,15 +1500,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bây giờ ta kiểm tra xem có sự chênh lệch giữa giá trao đổi và giá trị thực không"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Việc giá trị thực không có trong bảng này nên ta sẽ dựa vào các đồng tiền ổn định để kiểm tra giá"
+    "### <center> Question 2: Is the quotation correct according to the value of the tokens ? </center>\n",
+    "\n",
+    "#### Benifits of finding the answer:\n",
+    "- After this we can know should we should trading manny time in this market\n",
+    "- Beside that, we can verify that the price of the token for user is clearly \n",
+    "#### Answer:\n",
+    "- We don't got the token price in the dataset, but we know that there are some `stable token` that have price nearly 1$ so:\n",
+    "    + Make a new `only_stable` that only contain price from `token` to `stable token`\n",
+    "    + Then we assume that the `stable token` price is allway 1$, small differences will be accepted\n",
+    "- Then with all symbol, we calculate the ratio of the given price with the price we get from `only_stable`"
    ]
   },
   {
@@ -1717,7 +1729,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ta coi bảng trên là giá trị thực của đồng (tuy trao đổi qua stable coin nhưng nó gần như giữ ở mức 1$), giờ ta sẽ kiểm tra giá"
+    "> now we got the table exchange price to `stable coin`"
    ]
   },
   {
@@ -1898,7 +1910,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### giờ ta xem xét chu kì tăng giảm của các token này"
+    "### <center>Question 3: Average time for each up/down cycle </center>\n",
+    "\n",
+    "#### Benifits of finding the answer:\n",
+    "- After this we can know the possibility that the trend of the token is changed in this market\n",
+    "- It also help us be careful when exchange based on the current trend\n",
+    "#### Answer:\n",
+    "- We only use the `high price` and `low price` because the other price is only in the a fixed time point\n",
+    "- Compare prices with the pervious time, if the gap `is 0` it still keep the trend, `lower than 0` is in down cycle, `higher than 0` is in up cycle\n",
+    "- After all, we look how is it distributed"
    ]
   },
   {
@@ -2129,13 +2149,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> thời gian trung bình cho mỗi lần tăng hoặc giảm nằm ở khoảng 2-3 chu kỳ, tuy đó thì chỉ số này sẽ không được chính xác lắm khi có độ lệch chuẩn khá là cao"
+    "> thời gian trung bình cho mỗi lần tăng hoặc giảm nằm ở khoảng 2-3 chu kỳ, tuy đó thì chỉ số này sẽ không được mạnh mẽ trong mọi trường hợp khi độ lệch chuẩn quá cao"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2149,12 +2169,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.12 (tags/v3.9.12:b28265d, Mar 23 2022, 23:52:46) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "a975ed8b98c08beba37d949353546e85fb5250a2bdceb316b7e036ee961162de"
    }
   }
  },
