--- a/src/analysis/2_Tools.ipynb
+++ b/src/analysis/2_Tools.ipynb
@@ -11619,6 +11619,22 @@
     "- ✅ When price line hit the upper line of the BB, it is a signal of selling and vice versa\n",
     "- ✅ Narrowing is a phenomenon that occurs when the upper and lower bands of BB move closer to each other and gradually approach the middle band, showing that the stock price is in an accumulation phase, low volatility. Inversely, it is a signal of raising of prices"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> So, is it possible to apply the bollinger band to the crypto market ?\n",
+    "<p>- Yes it can, base on the above graph the meaning of bollinger band still keep in crypto market\n",
+    "<p>- It also shows that the crypto market works in the same way as the stock market (supply and demand market)\n",
+    "<p>- But keep in mind that this bollinger is not the predict tool, it just show the current market supply and demand ratio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
