--- a/src/analysis/2_Tools.ipynb
+++ b/src/analysis/2_Tools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "btc_df = pd.read_csv('../../datastore/price/BTCUSDT_15m.csv').set_index(\"Kline open time\")[[\"Open price\", \"High price\", \"Low price\", \"Close price\"]]\n",
+    "btc_df = pd.read_csv('../../datastore/processed/BTCUSDT_15m.csv').set_index(\"Kline open time\")[[\"Open price\", \"High price\", \"Low price\", \"Close price\"]]\n",
     "btc_df.index = pd.to_datetime(btc_df.index, unit=\"ms\")\n",
     "btc_df.sort_index(inplace=True)\n",
     "btc_df = btc_df.iloc[-800:]\n",
@@ -11625,16 +11625,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> So, is it possible to apply the bollinger band to the crypto market ?\n",
+    "## ➡️ So, is it possible to apply the bollinger band to the crypto market ?\n",
     "<p>- Yes it can, base on the above graph the meaning of bollinger band still keep in crypto market\n",
     "<p>- It also shows that the crypto market works in the same way as the stock market (supply and demand market)\n",
     "<p>- But keep in mind that this bollinger is not the predict tool, it just show the current market supply and demand ratio"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
