--- a/src/obtain/get_all_price.ipynb
+++ b/src/obtain/get_all_price.ipynb
@@ -167,16 +167,9 @@
    },
    "outputs": [],
    "source": [
-    "symbols.to_csv(\"../../datastore/binance_symbols.csv\", index=False)\n",
-    "data.to_csv(\"../../datastore/prices.csv\", index=False)"
+    "symbols.to_csv(\"../../datastore/raw/binance_symbols.csv\", index=False)\n",
+    "data.to_csv(\"../../datastore/raw/prices.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
