--- a/src/obtain/get_each_price.ipynb
+++ b/src/obtain/get_each_price.ipynb
@@ -153,7 +153,7 @@
     "            df = pd.concat([df, pd.DataFrame(data, columns=price_cols)], axis=0)\n",
     "\n",
     "    df.drop(\"Unused field, ignore\", axis=1, inplace=True)\n",
-    "    df.to_csv(f\"../../datastore/price/{SYMBOL}_{PERIOD}.csv\", index=False)\n",
+    "    df.to_csv(f\"../../datastore/processed/{SYMBOL}_{PERIOD}.csv\", index=False)\n",
     "except:\n",
     "    print(f\"Error at {SYMBOL}\")"
    ]
