--- a/src/obtain/get_newest_price.ipynb
+++ b/src/obtain/get_newest_price.ipynb
@@ -2,8 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-10T05:47:58.457710Z",
+     "iopub.status.busy": "2023-01-10T05:47:58.457493Z",
+     "iopub.status.idle": "2023-01-10T05:47:58.882675Z",
+     "shell.execute_reply": "2023-01-10T05:47:58.882240Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -11,7 +18,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,8 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-10T05:47:58.912637Z",
+     "iopub.status.busy": "2023-01-10T05:47:58.912370Z",
+     "iopub.status.idle": "2023-01-10T05:47:58.915204Z",
+     "shell.execute_reply": "2023-01-10T05:47:58.914811Z"
+    }
+   },
    "outputs": [],
    "source": [
     "BINANCE_API_KEY = os.environ.get(\"BINANCE_API_KEY\")\n",
@@ -51,8 +65,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-10T05:47:58.917239Z",
+     "iopub.status.busy": "2023-01-10T05:47:58.917077Z",
+     "iopub.status.idle": "2023-01-10T05:47:59.114106Z",
+     "shell.execute_reply": "2023-01-10T05:47:59.113754Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -91,73 +112,73 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1517500800000</td>\n",
-       "      <td>9326.23</td>\n",
-       "      <td>9340.00</td>\n",
-       "      <td>9195.89</td>\n",
-       "      <td>9217.00</td>\n",
-       "      <td>487.476964</td>\n",
-       "      <td>1517501699999</td>\n",
-       "      <td>4.506285e+06</td>\n",
-       "      <td>4546</td>\n",
-       "      <td>171.643712</td>\n",
-       "      <td>1.586177e+06</td>\n",
+       "      <td>1517760000000</td>\n",
+       "      <td>8419.96</td>\n",
+       "      <td>8532.83</td>\n",
+       "      <td>8355.88</td>\n",
+       "      <td>8386.77</td>\n",
+       "      <td>472.122291</td>\n",
+       "      <td>1517760899999</td>\n",
+       "      <td>3.986791e+06</td>\n",
+       "      <td>5060</td>\n",
+       "      <td>215.227104</td>\n",
+       "      <td>1.818350e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1517501700000</td>\n",
-       "      <td>9208.09</td>\n",
-       "      <td>9275.00</td>\n",
-       "      <td>9130.00</td>\n",
-       "      <td>9145.00</td>\n",
-       "      <td>652.169234</td>\n",
-       "      <td>1517502599999</td>\n",
-       "      <td>6.004393e+06</td>\n",
-       "      <td>6930</td>\n",
-       "      <td>334.699485</td>\n",
-       "      <td>3.083885e+06</td>\n",
+       "      <td>1517760900000</td>\n",
+       "      <td>8386.77</td>\n",
+       "      <td>8485.24</td>\n",
+       "      <td>8300.00</td>\n",
+       "      <td>8450.06</td>\n",
+       "      <td>682.298603</td>\n",
+       "      <td>1517761799999</td>\n",
+       "      <td>5.702157e+06</td>\n",
+       "      <td>6430</td>\n",
+       "      <td>229.938351</td>\n",
+       "      <td>1.923916e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1517502600000</td>\n",
-       "      <td>9144.98</td>\n",
-       "      <td>9257.40</td>\n",
-       "      <td>9020.00</td>\n",
-       "      <td>9184.99</td>\n",
-       "      <td>1028.146331</td>\n",
-       "      <td>1517503499999</td>\n",
-       "      <td>9.361539e+06</td>\n",
-       "      <td>8632</td>\n",
-       "      <td>376.048437</td>\n",
-       "      <td>3.429102e+06</td>\n",
+       "      <td>1517761800000</td>\n",
+       "      <td>8476.38</td>\n",
+       "      <td>8495.01</td>\n",
+       "      <td>8373.48</td>\n",
+       "      <td>8467.62</td>\n",
+       "      <td>424.080667</td>\n",
+       "      <td>1517762699999</td>\n",
+       "      <td>3.584546e+06</td>\n",
+       "      <td>4384</td>\n",
+       "      <td>235.532918</td>\n",
+       "      <td>1.992314e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1517503500000</td>\n",
-       "      <td>9184.98</td>\n",
-       "      <td>9270.00</td>\n",
-       "      <td>9011.51</td>\n",
-       "      <td>9066.66</td>\n",
-       "      <td>770.943401</td>\n",
-       "      <td>1517504399999</td>\n",
-       "      <td>7.037635e+06</td>\n",
-       "      <td>6722</td>\n",
-       "      <td>356.335133</td>\n",
-       "      <td>3.256645e+06</td>\n",
+       "      <td>1517762700000</td>\n",
+       "      <td>8441.29</td>\n",
+       "      <td>8500.09</td>\n",
+       "      <td>8370.02</td>\n",
+       "      <td>8500.00</td>\n",
+       "      <td>227.783558</td>\n",
+       "      <td>1517763599999</td>\n",
+       "      <td>1.917746e+06</td>\n",
+       "      <td>3077</td>\n",
+       "      <td>137.355614</td>\n",
+       "      <td>1.156986e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1517504400000</td>\n",
-       "      <td>9058.78</td>\n",
-       "      <td>9156.98</td>\n",
-       "      <td>9040.00</td>\n",
-       "      <td>9106.22</td>\n",
-       "      <td>490.060336</td>\n",
-       "      <td>1517505299999</td>\n",
-       "      <td>4.458077e+06</td>\n",
-       "      <td>4557</td>\n",
-       "      <td>244.406918</td>\n",
-       "      <td>2.225572e+06</td>\n",
+       "      <td>1517763600000</td>\n",
+       "      <td>8500.00</td>\n",
+       "      <td>8579.00</td>\n",
+       "      <td>8440.01</td>\n",
+       "      <td>8543.98</td>\n",
+       "      <td>322.068486</td>\n",
+       "      <td>1517764499999</td>\n",
+       "      <td>2.743974e+06</td>\n",
+       "      <td>4304</td>\n",
+       "      <td>189.538814</td>\n",
+       "      <td>1.615451e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -174,130 +195,130 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>174058</th>\n",
-       "      <td>1673004600000</td>\n",
-       "      <td>16746.93</td>\n",
-       "      <td>16750.99</td>\n",
-       "      <td>16727.63</td>\n",
-       "      <td>16747.39</td>\n",
-       "      <td>2220.155130</td>\n",
-       "      <td>1673005499999</td>\n",
-       "      <td>3.716158e+07</td>\n",
-       "      <td>64789</td>\n",
-       "      <td>1048.957450</td>\n",
-       "      <td>1.755804e+07</td>\n",
+       "      <th>172325</th>\n",
+       "      <td>1673320500000</td>\n",
+       "      <td>17190.40</td>\n",
+       "      <td>17199.00</td>\n",
+       "      <td>17182.54</td>\n",
+       "      <td>17196.23</td>\n",
+       "      <td>1299.372550</td>\n",
+       "      <td>1673321399999</td>\n",
+       "      <td>2.233834e+07</td>\n",
+       "      <td>35908</td>\n",
+       "      <td>649.753260</td>\n",
+       "      <td>1.117039e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>174059</th>\n",
-       "      <td>1673005500000</td>\n",
-       "      <td>16747.39</td>\n",
-       "      <td>16755.00</td>\n",
-       "      <td>16736.98</td>\n",
-       "      <td>16738.22</td>\n",
-       "      <td>1629.538980</td>\n",
-       "      <td>1673006399999</td>\n",
-       "      <td>2.728818e+07</td>\n",
-       "      <td>46912</td>\n",
-       "      <td>753.431990</td>\n",
-       "      <td>1.261708e+07</td>\n",
+       "      <th>172326</th>\n",
+       "      <td>1673321400000</td>\n",
+       "      <td>17196.69</td>\n",
+       "      <td>17198.84</td>\n",
+       "      <td>17191.66</td>\n",
+       "      <td>17191.87</td>\n",
+       "      <td>147.367870</td>\n",
+       "      <td>1673322299999</td>\n",
+       "      <td>2.533988e+06</td>\n",
+       "      <td>4488</td>\n",
+       "      <td>63.182000</td>\n",
+       "      <td>1.086424e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>174060</th>\n",
-       "      <td>1673006400000</td>\n",
-       "      <td>16738.74</td>\n",
-       "      <td>16749.00</td>\n",
-       "      <td>16730.12</td>\n",
-       "      <td>16737.15</td>\n",
-       "      <td>1763.072670</td>\n",
-       "      <td>1673007299999</td>\n",
-       "      <td>2.950915e+07</td>\n",
-       "      <td>50505</td>\n",
-       "      <td>863.799650</td>\n",
-       "      <td>1.445800e+07</td>\n",
+       "      <th>172327</th>\n",
+       "      <td>1673322300000</td>\n",
+       "      <td>17197.56</td>\n",
+       "      <td>17208.17</td>\n",
+       "      <td>17190.32</td>\n",
+       "      <td>17205.72</td>\n",
+       "      <td>1443.750390</td>\n",
+       "      <td>1673323199999</td>\n",
+       "      <td>2.483027e+07</td>\n",
+       "      <td>41474</td>\n",
+       "      <td>714.057870</td>\n",
+       "      <td>1.228088e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>174061</th>\n",
-       "      <td>1673007300000</td>\n",
-       "      <td>16737.15</td>\n",
-       "      <td>16738.28</td>\n",
-       "      <td>16719.09</td>\n",
-       "      <td>16721.17</td>\n",
-       "      <td>1919.983110</td>\n",
-       "      <td>1673008199999</td>\n",
-       "      <td>3.212120e+07</td>\n",
-       "      <td>52028</td>\n",
-       "      <td>945.981120</td>\n",
-       "      <td>1.582643e+07</td>\n",
+       "      <th>172328</th>\n",
+       "      <td>1673323200000</td>\n",
+       "      <td>17205.31</td>\n",
+       "      <td>17210.29</td>\n",
+       "      <td>17198.68</td>\n",
+       "      <td>17201.61</td>\n",
+       "      <td>1216.826590</td>\n",
+       "      <td>1673324099999</td>\n",
+       "      <td>2.093487e+07</td>\n",
+       "      <td>28769</td>\n",
+       "      <td>584.294810</td>\n",
+       "      <td>1.005271e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>174062</th>\n",
-       "      <td>1673008200000</td>\n",
-       "      <td>16721.17</td>\n",
-       "      <td>16738.14</td>\n",
-       "      <td>16717.66</td>\n",
-       "      <td>16733.72</td>\n",
-       "      <td>1039.658290</td>\n",
-       "      <td>1673009099999</td>\n",
-       "      <td>1.739167e+07</td>\n",
-       "      <td>28824</td>\n",
-       "      <td>559.994890</td>\n",
-       "      <td>9.367704e+06</td>\n",
+       "      <th>172329</th>\n",
+       "      <td>1673324100000</td>\n",
+       "      <td>17204.15</td>\n",
+       "      <td>17208.16</td>\n",
+       "      <td>17201.56</td>\n",
+       "      <td>17201.96</td>\n",
+       "      <td>152.120460</td>\n",
+       "      <td>1673324999999</td>\n",
+       "      <td>2.617166e+06</td>\n",
+       "      <td>4339</td>\n",
+       "      <td>87.581520</td>\n",
+       "      <td>1.506852e+06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>174063 rows × 11 columns</p>\n",
+       "<p>172330 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "        Kline open time  Open price  High price  Low price  Close price  \\\n",
-       "0         1517500800000     9326.23     9340.00    9195.89      9217.00   \n",
-       "1         1517501700000     9208.09     9275.00    9130.00      9145.00   \n",
-       "2         1517502600000     9144.98     9257.40    9020.00      9184.99   \n",
-       "3         1517503500000     9184.98     9270.00    9011.51      9066.66   \n",
-       "4         1517504400000     9058.78     9156.98    9040.00      9106.22   \n",
+       "0         1517760000000     8419.96     8532.83    8355.88      8386.77   \n",
+       "1         1517760900000     8386.77     8485.24    8300.00      8450.06   \n",
+       "2         1517761800000     8476.38     8495.01    8373.48      8467.62   \n",
+       "3         1517762700000     8441.29     8500.09    8370.02      8500.00   \n",
+       "4         1517763600000     8500.00     8579.00    8440.01      8543.98   \n",
        "...                 ...         ...         ...        ...          ...   \n",
-       "174058    1673004600000    16746.93    16750.99   16727.63     16747.39   \n",
-       "174059    1673005500000    16747.39    16755.00   16736.98     16738.22   \n",
-       "174060    1673006400000    16738.74    16749.00   16730.12     16737.15   \n",
-       "174061    1673007300000    16737.15    16738.28   16719.09     16721.17   \n",
-       "174062    1673008200000    16721.17    16738.14   16717.66     16733.72   \n",
+       "172325    1673320500000    17190.40    17199.00   17182.54     17196.23   \n",
+       "172326    1673321400000    17196.69    17198.84   17191.66     17191.87   \n",
+       "172327    1673322300000    17197.56    17208.17   17190.32     17205.72   \n",
+       "172328    1673323200000    17205.31    17210.29   17198.68     17201.61   \n",
+       "172329    1673324100000    17204.15    17208.16   17201.56     17201.96   \n",
        "\n",
        "             Volume  Kline Close time  Quote asset volume  Number of trades  \\\n",
-       "0        487.476964     1517501699999        4.506285e+06              4546   \n",
-       "1        652.169234     1517502599999        6.004393e+06              6930   \n",
-       "2       1028.146331     1517503499999        9.361539e+06              8632   \n",
-       "3        770.943401     1517504399999        7.037635e+06              6722   \n",
-       "4        490.060336     1517505299999        4.458077e+06              4557   \n",
+       "0        472.122291     1517760899999        3.986791e+06              5060   \n",
+       "1        682.298603     1517761799999        5.702157e+06              6430   \n",
+       "2        424.080667     1517762699999        3.584546e+06              4384   \n",
+       "3        227.783558     1517763599999        1.917746e+06              3077   \n",
+       "4        322.068486     1517764499999        2.743974e+06              4304   \n",
        "...             ...               ...                 ...               ...   \n",
-       "174058  2220.155130     1673005499999        3.716158e+07             64789   \n",
-       "174059  1629.538980     1673006399999        2.728818e+07             46912   \n",
-       "174060  1763.072670     1673007299999        2.950915e+07             50505   \n",
-       "174061  1919.983110     1673008199999        3.212120e+07             52028   \n",
-       "174062  1039.658290     1673009099999        1.739167e+07             28824   \n",
+       "172325  1299.372550     1673321399999        2.233834e+07             35908   \n",
+       "172326   147.367870     1673322299999        2.533988e+06              4488   \n",
+       "172327  1443.750390     1673323199999        2.483027e+07             41474   \n",
+       "172328  1216.826590     1673324099999        2.093487e+07             28769   \n",
+       "172329   152.120460     1673324999999        2.617166e+06              4339   \n",
        "\n",
        "        Taker buy base asset volume  Taker buy quote asset volume  \n",
-       "0                        171.643712                  1.586177e+06  \n",
-       "1                        334.699485                  3.083885e+06  \n",
-       "2                        376.048437                  3.429102e+06  \n",
-       "3                        356.335133                  3.256645e+06  \n",
-       "4                        244.406918                  2.225572e+06  \n",
+       "0                        215.227104                  1.818350e+06  \n",
+       "1                        229.938351                  1.923916e+06  \n",
+       "2                        235.532918                  1.992314e+06  \n",
+       "3                        137.355614                  1.156986e+06  \n",
+       "4                        189.538814                  1.615451e+06  \n",
        "...                             ...                           ...  \n",
-       "174058                  1048.957450                  1.755804e+07  \n",
-       "174059                   753.431990                  1.261708e+07  \n",
-       "174060                   863.799650                  1.445800e+07  \n",
-       "174061                   945.981120                  1.582643e+07  \n",
-       "174062                   559.994890                  9.367704e+06  \n",
+       "172325                   649.753260                  1.117039e+07  \n",
+       "172326                    63.182000                  1.086424e+06  \n",
+       "172327                   714.057870                  1.228088e+07  \n",
+       "172328                   584.294810                  1.005271e+07  \n",
+       "172329                    87.581520                  1.506852e+06  \n",
        "\n",
-       "[174063 rows x 11 columns]"
+       "[172330 rows x 11 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "price = pd.read_csv(f\"../../datastore/price/{SYMBOL}_{PERIOD}.csv\")\n",
+    "price = pd.read_csv(f\"../../datastore/processed/{SYMBOL}_{PERIOD}.csv\")\n",
     "price"
    ]
   },
@@ -310,8 +331,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-10T05:47:59.116061Z",
+     "iopub.status.busy": "2023-01-10T05:47:59.115909Z",
+     "iopub.status.idle": "2023-01-10T05:47:59.118412Z",
+     "shell.execute_reply": "2023-01-10T05:47:59.118106Z"
+    }
+   },
    "outputs": [],
    "source": [
     "start_timestamp = price.iloc[-1, 0]\n",
@@ -321,8 +349,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-10T05:47:59.120358Z",
+     "iopub.status.busy": "2023-01-10T05:47:59.120183Z",
+     "iopub.status.idle": "2023-01-10T05:47:59.527734Z",
+     "shell.execute_reply": "2023-01-10T05:47:59.527298Z"
+    }
+   },
    "outputs": [],
    "source": [
     "for timestamp in range(start_timestamp, today_timestamp, DURATION_EACH_DAY):\n",
@@ -344,13 +379,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-10T05:47:59.530244Z",
+     "iopub.status.busy": "2023-01-10T05:47:59.530070Z",
+     "iopub.status.idle": "2023-01-10T05:48:00.448102Z",
+     "shell.execute_reply": "2023-01-10T05:48:00.447506Z"
+    }
+   },
    "outputs": [],
    "source": [
     "price = pd.concat([price, new_price_df])\n",
     "price.drop_duplicates(\"Kline open time\", inplace=True)\n",
-    "price.to_csv(f\"../../datastore/price/{SYMBOL}_{PERIOD}.csv\", index=False)"
+    "price.to_csv(f\"../../datastore/processed/{SYMBOL}_{PERIOD}.csv\", index=False)"
    ]
   }
  ],
@@ -372,7 +414,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "479fcfcd8a781549d023ec8ee70cfd9d1bc4e10e5bc48a6e6de9df19fe23d55c"
