--- a/src/obtain/main.ipynb
+++ b/src/obtain/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -17,11 +17,10 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook ../obtain/get_symbols.ipynb to notebook\n",
-      "[NbConvertApp] Writing 5359 bytes to ../obtain/get_symbols.ipynb\n",
+      "[NbConvertApp] Writing 5363 bytes to ../obtain/get_symbols.ipynb\n",
       "[NbConvertApp] Converting notebook ../obtain/get_each_price.ipynb to notebook\n",
-      "[NbConvertApp] Writing 4912 bytes to ../obtain/get_each_price.ipynb\n",
-      "[NbConvertApp] Converting notebook ../obtain/get_all_price.ipynb to notebook\n",
-      "[NbConvertApp] Writing 6183 bytes to ../obtain/get_all_price.ipynb\n"
+      "^C\n",
+      "[NbConvertApp] Converting notebook ../obtain/get_all_price.ipynb to notebook\n"
      ]
     }
    ],
@@ -30,11 +29,18 @@
     "!jupyter nbconvert --execute --to notebook --inplace ../obtain/get_each_price.ipynb\n",
     "!jupyter nbconvert --execute --to notebook --inplace ../obtain/get_all_price.ipynb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit",
+   "display_name": "Python 3.8.8 ('NaDS')",
    "language": "python",
    "name": "python3"
   },
@@ -48,12 +54,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "479fcfcd8a781549d023ec8ee70cfd9d1bc4e10e5bc48a6e6de9df19fe23d55c"
    }
   }
  },
