CRY-38 | add comment for feature selection and delete empty cell

--- a/src/obtain/get_symbols.ipynb
+++ b/src/obtain/get_symbols.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 1,
@@ -131,7 +131,19 @@
      "shell.execute_reply": "2023-01-09T16:56:52.318917Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\btn\\Coding\\CryptoPrediction\\src\\obtain\\get_symbols.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/btn/Coding/CryptoPrediction/src/obtain/get_symbols.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m symbols \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(get_symbol_attr, raw_symbols[\u001b[39m'\u001b[39;49m\u001b[39mdata\u001b[39;49m\u001b[39m'\u001b[39;49m]))\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'data'"
+     ]
+    }
+   ],
    "source": [
     "symbols = list(map(get_symbol_attr, raw_symbols['data']))"
    ]
@@ -171,7 +183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('NaDS')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -185,11 +197,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "479fcfcd8a781549d023ec8ee70cfd9d1bc4e10e5bc48a6e6de9df19fe23d55c"
+    "hash": "37b8237ea820e88a1d26491c00c98f736c11fa9ce045cd1f80b04c4e807e90c1"
    }
   }
  },
