--- a/src/obtain/get_each_price.ipynb
+++ b/src/obtain/get_each_price.ipynb
@@ -12,17 +12,17 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-09T10:21:49.939032Z",
-     "iopub.status.busy": "2023-01-09T10:21:49.938842Z",
-     "iopub.status.idle": "2023-01-09T10:21:50.228732Z",
-     "shell.execute_reply": "2023-01-09T10:21:50.228284Z"
+     "iopub.execute_input": "2023-01-10T06:53:59.590554Z",
+     "iopub.status.busy": "2023-01-10T06:53:59.590554Z",
+     "iopub.status.idle": "2023-01-10T06:54:00.232734Z",
+     "shell.execute_reply": "2023-01-10T06:54:00.231786Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 1,
@@ -57,10 +57,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-09T10:21:50.255357Z",
-     "iopub.status.busy": "2023-01-09T10:21:50.255058Z",
-     "iopub.status.idle": "2023-01-09T10:21:50.257832Z",
-     "shell.execute_reply": "2023-01-09T10:21:50.257479Z"
+     "iopub.execute_input": "2023-01-10T06:54:00.262016Z",
+     "iopub.status.busy": "2023-01-10T06:54:00.261039Z",
+     "iopub.status.idle": "2023-01-10T06:54:00.265946Z",
+     "shell.execute_reply": "2023-01-10T06:54:00.265946Z"
     }
    },
    "outputs": [],
@@ -89,10 +89,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-09T10:21:50.259802Z",
-     "iopub.status.busy": "2023-01-09T10:21:50.259657Z",
-     "iopub.status.idle": "2023-01-09T10:21:50.682904Z",
-     "shell.execute_reply": "2023-01-09T10:21:50.682493Z"
+     "iopub.execute_input": "2023-01-10T06:54:00.272751Z",
+     "iopub.status.busy": "2023-01-10T06:54:00.272751Z",
+     "iopub.status.idle": "2023-01-10T06:54:02.015844Z",
+     "shell.execute_reply": "2023-01-10T06:54:02.014979Z"
     }
    },
    "outputs": [],
@@ -106,10 +106,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-09T10:21:50.685138Z",
-     "iopub.status.busy": "2023-01-09T10:21:50.684971Z",
-     "iopub.status.idle": "2023-01-09T10:21:50.687396Z",
-     "shell.execute_reply": "2023-01-09T10:21:50.687094Z"
+     "iopub.execute_input": "2023-01-10T06:54:02.022702Z",
+     "iopub.status.busy": "2023-01-10T06:54:02.021699Z",
+     "iopub.status.idle": "2023-01-10T06:54:02.027581Z",
+     "shell.execute_reply": "2023-01-10T06:54:02.027581Z"
     }
    },
    "outputs": [
@@ -130,10 +130,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-09T10:21:50.689131Z",
-     "iopub.status.busy": "2023-01-09T10:21:50.688972Z",
-     "iopub.status.idle": "2023-01-09T10:26:59.997742Z",
-     "shell.execute_reply": "2023-01-09T10:26:59.996634Z"
+     "iopub.execute_input": "2023-01-10T06:54:02.032462Z",
+     "iopub.status.busy": "2023-01-10T06:54:02.031487Z",
+     "iopub.status.idle": "2023-01-10T07:20:28.729432Z",
+     "shell.execute_reply": "2023-01-10T07:20:28.728458Z"
     }
    },
    "outputs": [],
@@ -175,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
