--- a/src/obtain/get_newest_price.ipynb
+++ b/src/obtain/get_newest_price.ipynb
@@ -398,7 +398,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('NaDS')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -412,11 +412,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "479fcfcd8a781549d023ec8ee70cfd9d1bc4e10e5bc48a6e6de9df19fe23d55c"
+    "hash": "37b8237ea820e88a1d26491c00c98f736c11fa9ce045cd1f80b04c4e807e90c1"
    }
   }
  },
