--- a/src/obtain/main.ipynb
+++ b/src/obtain/main.ipynb
@@ -9,38 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook ../obtain/get_symbols.ipynb to notebook\n",
-      "[NbConvertApp] Writing 5363 bytes to ../obtain/get_symbols.ipynb\n",
-      "[NbConvertApp] Converting notebook ../obtain/get_each_price.ipynb to notebook\n",
-      "^C\n",
-      "[NbConvertApp] Converting notebook ../obtain/get_all_price.ipynb to notebook\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!jupyter nbconvert --execute --to notebook --inplace ../obtain/get_symbols.ipynb\n",
     "!jupyter nbconvert --execute --to notebook --inplace ../obtain/get_each_price.ipynb\n",
     "!jupyter nbconvert --execute --to notebook --inplace ../obtain/get_all_price.ipynb"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('NaDS')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -54,12 +35,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "479fcfcd8a781549d023ec8ee70cfd9d1bc4e10e5bc48a6e6de9df19fe23d55c"
+    "hash": "37b8237ea820e88a1d26491c00c98f736c11fa9ce045cd1f80b04c4e807e90c1"
    }
   }
  },
